testsuite/tests/linear/should_fail/T25185.stderr
T25185.hs:10:3: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘y’
    • In an equation for ‘g’: g y = f y

